# planning_scene_fitter

./: .rosinstall  CMakeLists.txt  package.xml
include/planning_scene_fitter/: beam_model.h  beam_model.hpp  fitter.h  mesh_tools.h
launch/: test.launch
meshes/: shelf.stl
scripts/: main.py
src/: beam_model.cpp  fitter.cpp  main.cpp  mesh_tools.cpp
